# Airflow

./: .gitignore  Makefile  README.md  airflow.yaml  go.mod  go.sum
DAGs/: activate.sh  airflow_variables_demo.py  bash_operator.py  bash_template_demo.py  complex_task_flow.py  demo_sql_template.sql  pyproject.toml  task_group_demo.py
DAGs/brreg/: __init__.py  brreg.py  brreg_config.py  subunits.py  units.py
DAGs/brreg/templates/: analyze.sql  create_table_subunits.sql  create_table_units.sql  switcharoo.sql
DAGs/demos/: airflow_variables_demo.py  bash_operator.py  bash_template_demo.py  catchup_demo.py  complex_task_flow.py  demo_bash_template.sh  kubernetes_pod_executor.py  minimum_viable.py  python_operator_demo.py  task_group_demo.py
DAGs/lib/models/: brreg_base.py  subunit.py  subunit_base.py  subunit_staging.py  unit.py  unit_base.py  unit_staging.py
DAGs/peppol/: peppol.py
DAGs/peppol/templates/: create_table_peppol_business_cards.sql
DAGs/utils/: __init__.py  database_credentials.py
cmd/brreg/: main.go
cmd/brreg-units/: main.go
cmd/elma/: main.go
cmd/peppol/: main.go
dockerfiles/: brreg.Dockerfile  peppol.Dockerfile
internal/brreg/: units.go
internal/brreg/units/: units.go
internal/data/: models.go  peppol.go  subunits.go  units.go
internal/peppol/: peppol.go
manifest/: airflow-secrets.yaml  dags-pv.yaml  dags-pvc.yaml  logs-pv.yaml  logs-pvc.yaml  microk8s-airflow-dags-pvc.yaml  microk8s-sc.yaml  namespace.yaml
